# muitoEngracado

./: .gitignore  Cargo.toml  README.md
src/: main.rs  rss_fetcher.rs
templates/: screen.glade  screen.glade~
