[package]
name = "muito_engracado"
version = "0.1.0"
authors = ["Andre Furlan <ensismoebius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#easy_rss = "1.0.1"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

